authentication and authorization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=ptsd-web-application
+
+# Конфигурация источника данных (Data source)
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ptsd-web-application-db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# Конфигурация самого Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+
+# Чтобы работали HTTP метода RUT, PATCH, DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
